@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-06-17T16:34:31Z",
-  "count_outdated" : 28,
-  "uniques_outdated" : 8,
+  "timestamp" : "2022-06-29T08:31:42Z",
+  "count_outdated" : 30,
+  "uniques_outdated" : 9,
   "count" : 35,
   "uniques" : 10,
   "views" : [
-    {
-      "timestamp": "2022-06-15T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-06-17T00:00:00Z",
       "count": 5,
