@@ -1,12 +1,7 @@
 {
-  "count": 7,
-  "uniques": 2,
+  "count": 5,
+  "uniques": 1,
   "views": [
-    {
-      "timestamp": "2022-06-15T00:00:00Z",
-      "count": 2,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-06-17T00:00:00Z",
       "count": 5,
