@@ -1,3 +1,10 @@
+2022-06-29T08:31:42Z:
+* notice: last 14d: unq all: 1 5
+* notice: prev accum: outdated-unq outdated-all / unq all: 8 28 / 10 35
+* notice: next accum: outdated-unq outdated-all / unq all: 9 30 / 10 35
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2022-06-15] / []
+
 2022-06-17T16:34:31Z:
 * notice: last 14d: unq all: 2 7
 * notice: prev accum: outdated-unq outdated-all / unq all: 8 28 / 9 30
